	src/mod_roster_odbc.erl: Use exmpp_jid:to_binary/1 when possible.

	* src/mod_roster_odbc.erl, src/odbc/ejabberd_odbc.erl:
	ejabberd_odbc:escape/1 now can escape binaries too. This 
	avoid the need to convert a binary value to list() just to 
	sql-escape it. The escaped value returned is allways a list() 
	(ejabberd's odbc drivers only works on lists())

2009-02-23  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_c2s.erl: Do not call mod_caps:clear_caps, this previous
	optimization is too agressive and breaks PubSub/PEP standard behavior
	(EJAB-854)

2009-02-21  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/mod_roster.erl: Bugfix in remove_user/2: values already
	in binary() format.

2009-02-21  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth.erl: Password is undefined when using digest

2009-02-20 Pablo Polvorin <pablo.polvorin@process-one.net>

	* src/mod_offline_odbc.erl, src/mod_privacy_odbc.erl, 
	src/ejabberd_auth.erl, src/mod_vcard_odbc.erl,
	src/mod_private_odbc.erl, src/mod_roster_odbc.erl: remove_user hook
	actualized to expect binary arguments. 

	* src/web/ejabberd_web_admin.erl: Fix add / remove users.

	* src/mod_configure.erl: Fix bug in form generation.
	

2009-02-19 Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix nodetree plugin resolver

	* src/mod_pubsub/mod_pubsub.erl: backport last changes from trunk
	* src/mod_pubsub/node_mb.erl: Likewise
	* src/mod_pubsub/node_buddy.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_public.erl: Likewise
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_club.erl: Likewise

2009-02-18 Pablo Polvorin <pablo.polvorin@process-one.net>

	* src/ejabberd_auth.erl: Fix: for legacy authentication, the Digest
	parameters could be 'undefined'.

	* src/mod_muc/mod_muc_room.erl: Typo.
